[project]
name = "dflash"
version = "0.1.0"
description = "DFlash: Block Diffusion for Flash Speculative Decoding"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers==4.57.1",
    "accelerate",
    "rich",
    "packaging",
    "ninja",
    "loguru",
    "numpy",
    "tqdm",
    "datasets",
    "requests",
    # added for local experiment notebooks
    "jupyter",
    "matplotlib",
    # added for easier config management in personal experiments
    "omegaconf",
    # added for profiling and benchmarking experiments
    "py-spy",
    # added for experiment result tracking
    "wandb",
    # added for faster JSON serialization in result logging
    "orjson",
]

[tool.setuptools.packages.find]
include = ["dflash*"]

[project.optional-dependencies]
sglang = [
    "sglang[all] @ git+https://github.com/sgl-project/sglang.git@refs/pull/20547/head#subdirectory=python",
]
vllm = [
    "vllm",
]
